2000-08-17  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-08-17  Kai Lahmann <kl@linuxfaqs.de>

	* de.po: Updated German translation

2000-08-16  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-08-13  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.
	* POTFILES.in: Added missing files that are in the build.

2000-08-12  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.
	* POTFILES.in: Added missing files that are in the build. Sorted in alphabet order


2000-08-11  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-08-10  Akira TAGOH  <at@ue-spacy.com>

	* ja.po: Updated Japanese translation.

2000-08-08  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-08-07  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Added missing files that are in the build.
	* no.po: Updated Norwegian translation.
	
2000-08-07  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-08-05  Fatih Demir  <kabalak@gmx.net> 

        * tr.po: Updated the Turkish translation.

2000-08-04  Szabolcs BAN <shooby@gnome.hu>

	* hu.po: Updated Hungarian translations.

2000-08-03 Alastair McKinstry <mckinstry@computer.org>

	* ga.po: Add Irish translation.

2000-08-02  Pablo Saratxaga <pablo@mandrakesoft.com>

	* es.po,hu.po,it.po,sl.po: various syntax checkings (missing %s, %S
	instead of %s etc)

2000-07-30  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-07-28  Szabolcs BAN <shooby@gnome.hu>

	* hu.po: Updated Hungarian translations.

2000-07-27  Fatih Demir  <kabalak@gmx.net> 

        * tr.po: Updated the Turkish translation.

2000-07-27  Fatih Demir  <kabalak@gmx.net> 

        * tr.po: Updated the Turkish translation.

2000-07-26  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-07-24  Matthias Warkus  <mawa@iname.com>

	* de.po: Updated German translation.
