@@ -1,3 +1,8 @@
+2000-08-19  Valek Filippov  <frob@df.ru>
+
+	* ru.po: updated russian translation.
+	* POTFILES.in: Added missing files that are in the build.
+
 2000-08-17  Valek Filippov  <frob@df.ru>
 
 	* ru.po: updated russian translation.
